--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,3 +34,8 @@ set -g pane-active-border-style fg=colour39   # bright blue for active pane
 
 # --- Status bar ---
 set -g status-right ""   # removes the clock/time
+
+# --- Allow passthrough for Kitty graphics ---
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
